# nanyc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  appveyor.yml  build-settings.txt  changelog.md  readme.md
bootstrap/: .gitignore  CMakeLists.txt
bootstrap/cmake/: arch-platform.cmake  build-settings.cmake  compilation-database.cmake  cpack.cmake  grammar.cmake  libdyncall.cmake  libyuni.cmake  messages.cmake  package-deb.cmake  packages-deb-rpm.cmake  packages-deb.cmake  packages-msi.cmake  utils.cmake
bootstrap/docs/: .gitignore
bootstrap/libnanyc/: CMakeLists.txt  allocator.cpp  bugreport.cpp  console.cpp  libnanyc.h  library.c  nanyc.c  program.cpp  readme.md  report.cpp  utils.cpp  vm.cpp
bootstrap/libnanyc/cmake/: configure-config.h.cmake  configure-traces.h.cmake  configure-version.h.cmake
bootstrap/libnanyc/details/: fwd.h
bootstrap/libnanyc/details/ast/: ast.cpp  ast.h  ast.hxx  tree-index.cpp  tree-index.h  tree-index.hxx
bootstrap/libnanyc/details/atom/: atom-map.cpp  atom-map.h  atom-map.hxx  atom.cpp  atom.h  atom.hxx  classdef-follow.cpp  classdef-follow.h  classdef-follow.hxx  classdef-overloads.cpp  classdef-overloads.h  classdef-overloads.hxx  classdef-table-view.cpp  classdef-table-view.h  classdef-table-view.hxx  classdef-table.cpp  classdef-table.h  classdef-table.hxx  classdef.cpp  classdef.h  classdef.hxx  ctype.cpp  ctype.h  funcdef.cpp  funcdef.h  funcdef.hxx  interface.cpp  interface.h  interface.hxx  qualifiers.h  qualifiers.hxx  signature.cpp  signature.h  signature.hxx  type.h  vardef.h  vardef.hxx  visibility.cpp  visibility.h
bootstrap/libnanyc/details/c-api/: bugreport.cpp  build.cpp  common-debuginfo.hxx  console.cpp  memalloc.c  print-ast.cpp  program.cpp  project.cpp  run.cpp  type.cpp  validator.cpp  version.c  visibility.cpp
bootstrap/libnanyc/details/compiler/: compdb.h  compiler.cpp  compiler.h  report.cpp  report.h
bootstrap/libnanyc/details/context/: build-info.cpp  build-info.h  build.cpp  build.h  build.hxx  project.cpp  project.h  project.hxx  source.cpp  source.h  source.hxx  target.cpp  target.h  target.hxx
bootstrap/libnanyc/details/errors/: complain.cpp  complain.h  errors.cpp  errors.h  exception.cpp  exception.h
bootstrap/libnanyc/details/intrinsic/: catalog.cpp  catalog.h  catalog.hxx  intrinsic-table.cpp  intrinsic-table.h  intrinsic-table.hxx  intrinsic.cpp  intrinsic.h  runtime.h  std.console.cpp  std.core.h  std.core.string.cpp  std.digest.cpp  std.env.cpp  std.h  std.internals.utils.h  std.io.cpp  std.memory.cpp  std.os.process.cpp
bootstrap/libnanyc/details/io-adapter/: fallback.cpp  localfolder.cpp
bootstrap/libnanyc/details/ir/: emit.h  fwd.h  instruction.h  ir.h  scope-locker.h  sequence.cpp  sequence.h  sequence.hxx
bootstrap/libnanyc/details/program/: program.h
bootstrap/libnanyc/details/reporting/: fwd.h  levels.h  message.cpp  message.h  report.cpp  report.h  report.hxx
bootstrap/libnanyc/details/semantic/: assignment.cpp  atom-factory.cpp  atom-factory.h  capture-variable.cpp  debug.cpp  debug.h  deprecated-error.cpp  deprecated-error.h  error-not-declared.cpp  exception.cpp  exception.h  exceptions.cpp  exceptions.h  func-overload-match.cpp  func-overload-match.h  intrinsics-lang.cpp  intrinsics-nanyc-reflection.cpp  intrinsics-nanyc-reflection.h  intrinsics-nanyc.cpp  intrinsics.h  member-variable-default-clone.cpp  member-variable-default-dispose.cpp  member-variable-default-init.cpp  member-variable.h  opcode-alias.cpp  opcode-allocate.cpp  opcode-assign.cpp  opcode-blueprint.cpp  opcode-call.cpp  opcode-commontype.cpp  opcode-ensure-resolved.cpp  opcode-follow.cpp  opcode-identify.cpp  opcode-intrinsic.cpp  opcode-jzraise.cpp  opcode-onscopefail.cpp  opcode-pragma.cpp  opcode-push.cpp  opcode-raise.cpp  opcode-ref-unref.cpp  (+21 more)
bootstrap/libnanyc/details/type/: builtin.h
bootstrap/libnanyc/details/utils/: check-for-valid-identifier-name.cpp  check-for-valid-identifier-name.h  clid.cpp  clid.h  clid.hxx  dataregister.h  memory-allocator.h  origin.h  stringrefs.cpp  stringrefs.h  stringrefs.hxx
bootstrap/libnanyc/details/vm/: allocator.h  console.cpp  console.h  console.hxx  context-invoke.cpp  context-runner.cpp  context-runner.h  context.cpp  context.h  context.hxx  exception.h  io.cpp  io.h  machine.cpp  machine.h  memchecker.cpp  memchecker.h  program.cpp  program.h  program.hxx  stack.cpp  stack.h  stack.hxx  stacktrace.cpp  stacktrace.h  stacktrace.hxx  thread-context.cpp  thread-context.h  thread-context.hxx  thread.cpp  thread.h  types.h  vm.cpp  vm.h
bootstrap/libnanyc/include/nany/: allocator.h  console.h  extension.h  libinfo.h  nany.h  types.h
bootstrap/libnanyc/include/nanyc/: allocator.h  console.h  io.h  library.h  nanyc.h  program.h  report.h  types.h  utils.h  vm.h
bootstrap/libnanyc/nany/: extension.h
bootstrap/src/: CMakeLists.txt  check-syntax.cpp  dump-ast.cpp  nanyc-unittest.cpp  nanyc-utils.cpp  nanyc-utils.h  nanyc.cpp  unittest.cpp
bootstrap/tools/: CMakeLists.txt  nsl-index-generator.cpp  nsl-integer-float-generator.cpp  nsl-nany-to-cstring.cpp
src/bootstrap/: .gitignore  CMakeLists.txt  check-syntax.cpp  dump-ast.cpp  nany.cpp  print-ast.cpp  readme.md  small-vector.cpp  unittest-runner.cpp  unittest.cpp
src/bootstrap/cmake/: build-settings.cmake  config.h.cmake  messages.cmake  packages-deb-rpm.cmake  packages-msi.cmake  settings.cmake  wix-template.cmake  wix.cmake  you-complete-me.vim.template.cmake  yuni-profilebuild-template.cmake
src/bootstrap/docs/: doxyfile-c-api  doxyfile-libnany
src/bootstrap/libnany/: CMakeLists.txt  config.h.cmake  traces.h.cmake
src/bootstrap/libnany/c-api/: bind.cpp  bugreport.cpp  build.cpp  console.cpp  context.cpp  intrinsics.cpp  io-adapter-localfolder.cpp  memalloc.c  memory.cpp  print-ast.cpp  program.cpp  project.cpp  queueservice.cpp  report.cpp  run.cpp  sandbox.cpp  source.cpp  type.cpp  utilities.cpp  validator.cpp  version.c  visibility.cpp
src/bootstrap/libnanyc/: CMakeLists.txt
src/bootstrap/tools/: CMakeLists.txt  nsl-core-generator.cpp  nsl-nany-to-cstring.cpp
(+696 files in other folders)
